# python3-driver

./: .gitignore  .readthedocs.yml  CHANGELOG.md  LICENSE  README.md  README.rst  Rebuild-Databases.ps1  Set-TestEnvironment.ps1  pyproject.toml  setup.cfg  setup.py
.github/: FUNDING.yml
.github/workflows/: ci.yml
docs/: changelog.txt  conf.py  getting-started.txt  index.txt  make-docset  python-db-api-compliance.txt  ref-config.txt  ref-core.inc  ref-core.txt  ref-fbapi.inc  ref-fbapi.txt  ref-intf.txt  ref-main.txt  ref-types.inc  ref-types.txt  reference.txt  requirements.txt  usage-guide.txt
docs/_static/: basic.css
docs/firebird-driver.docset/Contents/: Info.plist
docs/firebird-driver.docset/Contents/Resources/: docSet.dsidx
docs/firebird-driver.docset/Contents/Resources/Documents/: .buildinfo  changelog.html  genindex.html  getting-started.html  index.html  license.html  objects.inv  py-modindex.html  python-db-api-compliance.html  ref-config.html  ref-core.html  ref-fbapi.html  ref-hooks.html  ref-intf.html  ref-main.html  ref-types.html  reference.html  search.html  searchindex.js  usage-guide.html
docs/firebird-driver.docset/Contents/Resources/Documents/_modules/: ctypes.html  datetime.html  index.html  typing.html
docs/firebird-driver.docset/Contents/Resources/Documents/_modules/firebird/base/: types.html
docs/firebird-driver.docset/Contents/Resources/Documents/_modules/firebird/driver/: config.html  core.html  fbapi.html  hooks.html  interfaces.html  types.html
docs/firebird-driver.docset/Contents/Resources/Documents/_sources/: changelog.txt  index.txt  license.txt  python-db-api-compliance.txt  ref-core.txt  ref-hooks.txt  ref-intf.txt  ref-main.txt  ref-types.txt  reference.txt  usage-guide.txt
docs/firebird-driver.docset/Contents/Resources/Documents/_static/: basic.css  bootstrap-sphinx.css
firebird/driver/: __init__.py  config.py  core.py  fbapi.py  hooks.py  interfaces.py  types.py
src/: test.py
src/firebird/driver/: __init__.py  config.py  core.py  fbapi.py  hooks.py  interfaces.py  types.py
test/: driver.py  environment.txt  fbtest30.fdb  fbtest40-base.fbk  fbtest40.fdb  fbtest50.fdb  test_driver.py
tests/: conftest.py  fbtest30-base.fbk  fbtest30-src.fbk  fbtest30.fdb  fbtest40.fdb  fbtest40.sql  fbtest50-base.fbk  fbtest50.fdb  test_array.py  test_blob.py  test_charset_conv.py  test_connection.py  test_cursor.py  test_db_createdrop.py  test_dbapi_compliance.py  test_distributed_trans.py  test_driver.py  test_events.py  test_fb4.py  test_hooks.py  test_info_providers.py  test_insert_data.py  test_issues.py  test_param_buffers.py  test_server.py  test_statement.py  test_stored_proc.py  test_transaction.py
