[build_sphinx]
source-dir=docs
all-files=True


[metadata]
name = firebird-driver
version = 1.4.3
description = Firebird driver
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
author = Pavel Císař
author_email = pcisar@users.sourceforge.net
license = MIT
license_file = LICENSE
url = https://github.com/FirebirdSQL/python3-driver
keywords = Firebird RDBMS driver
project_urls =
    Documentation = https://firebird-driver.rtfd.io
    Bug Reports = https://github.com/FirebirdSQL/python3-driver/issues
    Funding = https://www.firebirdsql.org/en/donate/
    Source = https://github.com/FirebirdSQL/python3-driver
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS
    Topic :: Software Development
    Topic :: Database

[options]
zip_safe = True
python_requires = >=3.8, <4
install_requires =
    firebird-base>=1.3.1
    python-dateutil>=2.8
packages = find_namespace:

[options.packages.find]
include = firebird.*

[options.entry_points]

[bdist_wheel]
# This flag says to generate wheels that support both Python 2 and Python
# 3. If your code will not run unchanged on both Python 2 and 3, you will
# need to generate separate wheels for each Python version that you
# support.
universal=0

